--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,10 @@
 [DEFAULT]
-# Mapper
-Creator = SK_la
-# Health Points
-HP = 8.5
-# Overall Difficulty
-OD = 7
-# Source of the map
-Source = EZ2AC_NT
-# Add tags
-Tags = 
-# NO Scratch?
-noS = N
-# NO PANEL?
-noP = N
-# Package in <mapper's APCK - Source> format?
-Packset = N
+creator = SK_la
+hp = 7
+od = 7
+source = EZ2AC_FNEX
+tags = 
+nos = N
+nop = N
+packset = N
+
