--- a/config.ini
+++ b/config.ini
@@ -2,9 +2,9 @@
 creator = SK_la
 hp = 7
 od = 7
-source = EZ2AC_TT
+source = EZ2AC_dup
 tags = 
 nos = N
 nop = N
 packset = N
-
+SpecificNumbers = 1,2,3,4,5,6,7,8,9,10,12,14,16,18
