准备换语言了

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,21 @@ cython_debug/
 /hash_cache/
 **cache*
 /setup.py
+/.idea/.gitignore
+/.vs/LAs-EZ2OSU/v17/.wsuo
+/.vs/LAs-EZ2OSU/FileContentIndex/61eae652-925d-4a52-9bba-aaec51ef525c.vsidx
+/.vs/LAs-EZ2OSU/v17/Browse.VC.db
+/.vs/LAs-EZ2OSU/v17/DocumentLayout.backup.json
+/.vs/LAs-EZ2OSU/v17/DocumentLayout.json
+/.idea/LAs-EZ2OSU.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.vs/ProjectSettings.json
+/.vs/PythonSettings.json
+/.idea/rGraphicsSettings.xml
+/.idea/rSettings.xml
+/.vs/slnx.sqlite
+/test.py
+/.idea/vcs.xml
+/.vs/VSWorkspaceState.json
